Fix SQL rendering with null parameters